# devify

./: .coveragerc  .dockerignore  .env.sample  .env.test.sample  .gitignore  .gitmodules  AGENTS.md  AUTHORS  Dockerfile  LICENSE  LICENSES.md  MANIFEST.in  README.md  README_ZH.md  TRADEMARKS.md  docker-compose.bluegreen.yml  docker-compose.dev.yml  docker-compose.yml  env.sample  noxfile.py  poetry.toml  pyproject.toml  run-nox.sh
.cursor/rules/: concise-summary.mdc  context7-rules.mdc  kiro-spec.mdc  kiro-tasks.mdc  python-rules.mdc  run-command-in-terminal.mdc
.github/workflows/: build_and_deploy.yml
.prompt/: celery_task_implementation_prompt.md
.prompt/docs/: langgraph-refactor-guide.md
.prompt/guidelines/: prompt_generation_guidelines.md  python_code_standards.md
.prompt/specs/haraka-email/: design.md  requirements.md
.prompt/templates/: create_apiview_crud_prompt.md  create_celery_chain_prompt.md  create_celery_task_prompt.md  create_langgraph_base_prompt.md  create_langgraph_node_prompt.md  create_langgraph_workflow_prompt.md  docker_environment_build_prompt.md
dev/: DEVELOPER.md  README.md  dev.sh  test-cov.sh  test-fast.sh  test-html.sh  test-integration.sh  test-unit.sh  test.sh
devify/: test_oauth_flow.py
devify/.cursor_tests/helpers/: setup_test_user.py
devify/accounts/: adapters.py  admin.py  apps.py  context_processors.py  management_urls.py  models.py  serializers.py  signals.py  utils.py  views.py
devify/accounts/migrations/: 0002_remove_profile_birth_date_remove_profile_city_and_more.py  0003_alter_profile_language.py
devify/accounts/services/: __init__.py  email.py  registration.py  user_bootstrap.py
devify/accounts/tests/: README.md  __init__.py  test_registration_api.py
devify/accounts/views/: __init__.py  management.py  oauth.py  password.py  registration.py  scenes.py  token.py  user.py
devify/auth/: urls.py
devify/billing/: COMMERCIAL-LICENSE.md  __init__.py  admin.py  admin_urls.py  admin_views.py  apps.py  constants.py  exceptions.py  fields.py  models.py  periodic_tasks.py  serializers.py  tasks.py  urls.py  views.py  viewsets.py  webhooks.py
devify/billing/migrations/: 0001_initial.py  0002_refactor_email_workflow_usage_onetoone.py  0003_usercredits_unique_active_user_credits.py  0004_add_is_internal_to_plan.py  0005_billingconfig.py  0006_billingauditlog.py  0007_rename_internal_payment_provider.py  0008_billing_payment_governance.py  0009_billingconfig_payment_callback_url.py  0010_billingconfig_payment_check_settings.py  0011_billingconfig_payment_record_backfill_settings.py  0012_billingconfig_payment_record_backfill_config.py  0013_encrypt_billingconfig_stripe_secrets.py  0014_alter_plan_status_default.py
devify/billing/services/: audit_service.py  billing_bootstrap_service.py  config_service.py  credits_service.py  customer_identity.py  djstripe_service.py  error_classifier.py  payment_check_scheduler.py  payment_provider_gateway.py  payment_record_backfill_scheduler.py  payment_record_service.py  periodic_task_scheduler.py  purchase_policy.py  stripe_compat.py  stripe_sync_service.py  subscription_service.py
devify/billing/tests/: TEST_SCENARIOS.md  __init__.py  conftest.py
devify/conf/billing/: README.md  plans.yaml
devify/conf/threadline/: MIGRATION.md  README.md  languages.yaml  prompts.yaml  scenarios.yaml
devify/core/: celery.py  middleware.py  periodic_registry.py  swagger.py  urls.py
devify/core/management/: __init__.py
devify/core/settings/: accounts.py  ai_services.py  base.py  billing.py  cache.py  celery.py  database.py  email_system.py  globals.py  logging_config.py  rest.py  sentry.py
devify/core/tests/: test_periodic_tasks_api.py
devify/core/tracking/: __init__.py  llm_tracker.py  ocr_tracker.py
devify/core/views/: __init__.py  periodic_tasks.py
devify/docs/: PROGRESS_TRACKING.md
devify/jirabot/: admin.py  apps.py  models.py  signals.py
devify/jirabot/migrations/: 0003_emailattachment_safe_filename_and_more.py  0004_populate_safe_filenames.py  0005_emailmessage_processing_stage_and_more.py  0006_remove_emailmessage_stage_progress_and_more.py  0007_add_updated_at_to_emailattachment.py  0008_add_attachment_status_machine.py  0009_set_initial_attachment_status.py  0010_simplify_attachment_status_machine.py  0011_final_status_machine_refactor.py
devify/jirabot/tasks/: __init__.py  chain_orchestrator.py  email_fetch.py  jira.py  llm_attachment.py  llm_email.py  llm_summary.py  notifications.py  ocr.old.py  ocr.py  summary.py
devify/jirabot/tests/: __init__.py  test_ocr_handling.py  test_state_machine.py
devify/jirabot/utils/: email_client.py  jira_handler.py  ocr_handler.py
devify/relay/: __init__.py  admin.py  admin_urls.py  apps.py  celery_bootstrap.py  models.py  serializers.py  tasks.py  urls.py  views.py
devify/relay/management/: __init__.py
devify/relay/migrations/: 0001_initial.py  0002_rename_relay_deliv_event_s_9f4e94_idx_relay_relay_event_i_0f5a98_idx_and_more.py
devify/relay/services/: __init__.py  adapters.py  delivery_strategy.py  dispatcher.py  legacy_issue_sync.py  legacy_sync.py  publisher.py  test_attachments.py
devify/relay/tests/: README.md  conftest.py  test_legacy_issue_sync.py  test_relay.py  (+3 more)
devify/threadline/: admin.py  admin_urls.py  apps.py  celery_bootstrap.py  models.py  periodic_tasks.py  serializers.py  signals.py  state_machine.py  urls.py
docker/: entrypoint.sh
docker/haraka/: README.md
docker/nginx/: default.conf  default.dev.conf
docs/: email-auto-merge-spec.md
scripts/: generate-ssl-cert.sh  manage-haraka-certs.sh  run-tests-in-devify-api.sh
specs/: TODO.md
specs/celery-to-langgraph-refactor/: IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  design.md  requirements.md  tasks.md
specs/email-file-cleanup/: design.md  requirements.md  tasks.md
specs/haraka-email/: design.md  requirements.md  tasks.md
specs/unify-email-fetch/: design.md  requirements.md  tasks.md
ui/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js
ui/src/: main.js
workflows/: build.yml
(+555 files in other folders)
